[package]
name = "rustyant"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RustyAnt is a Lambda front end providing a Redis-compatible (RESP-over-HTTP) key-value store backed by S3"
authors = ["monkut <monkut@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/monkut/rustyant"
keywords = ["rust", "redis", "resp", "lambda", "s3"]
categories = []
license = "LicenseRef-KICONIAWORKS-Customers"
publish = false

[lib]
name = "rustyant"
path = "src/lib.rs"

[[bin]]
name = "rustyant"
path = "src/main.rs"

# WebSocket transport variant — same library, different Lambda event shape.
[[bin]]
name = "rustyant-ws"
path = "src/bin/ws.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
bytes-utils = "0.1"
lambda_http = { version = "0.13", default-features = false, features = ["apigw_rest", "apigw_http", "tracing"] }
lambda_runtime = "0.13"
aws_lambda_events = { version = "0.16", default-features = false, features = ["apigw"] }
redis-protocol = { version = "5", features = ["resp2", "resp3", "bytes"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-apigatewaymanagement = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
wildmatch = "2"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.28"
futures-util = "0.3"

# ----------------------------------------------------------------------------
# Lints — rustc + clippy, surfaced in Cargo.toml (RFC 3389, stable since 1.74).
# Override a single lint with `[lints.clippy] <name> = "allow"`.
# `priority = -1` on a group keeps individual allow/deny lines above it intact.
# ----------------------------------------------------------------------------
[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

# ----------------------------------------------------------------------------
# Profiles — keep release binaries lean, dev builds fast.
# ----------------------------------------------------------------------------
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1
opt-level = 0
split-debuginfo = "unpacked"
